iFeature Pro Changelog

****************************

Version 2.0.2 (9-30-11)
-Added Flickr and Myspace social icons. 
-Added breadcrumb links to single post, page, archive, and search templates. 
-Added max-width and height:auto to full-size images to fix blowout issue. 
-Floats now properly clearing. 
-Post pagination added to main blog index page. 

Version 2.0.1 (8-05-11)
-Removed TimThumb, replaced with WordThumb for increased security.
-Added option to disable image resizing on iFeature Pro Slider. 
-Removed function stripping special characters from callout text value.
-Fixed title conditionals in header.php. 

Version 2.0 (8-01-11)
-TimThumb support added for automatic slider image resizing.
-Cleaned up stylesheet.
-iFeature Pro settings now found under Appearance tab in WP-Admin.
-Added Design tab, adding user control over various visual elements of the theme.
-Header options tab now called Social, moved several options to General and added check boxes to hide individual icons.
-Added Blog options tab, includes support for post excerpts, featured images, ability to hide meta elements.
-Replaced CoinSlider with Nivoslider, adds more animation effects and functionality options.
-Added custom Google Font input option.
-Added taxonomy structure to Custom Slides, users can now assign slides to custom categories to be called on a per-page basis.
-Added image uploader support for site logo and favicon in theme options.
-Added category drop-down menu support for theme options page.
-Added tabbed meta options for per-page options.
-Security fix in comments.php removing $_SERVER variable statement.
-Slider, SEO, and Callout options tabs removed, moved options to page meta options.
-Added Loop file.
-General bug fixes.

Version 1.1.6 (6-12-2011)
-API added for push updates.
-Added jQuery noconflict support to fix issues with plugins calling additional jQuery libraries.

Version 1.1.5 (6-06-2011)
-Updated search.php to reflect support for custom backgrounds.