@@ -45,7 +45,7 @@ get_header(); ?>
 							<div class="entry">
 								<?php the_content(); ?>
 							</div><!--end entry-->
-							
+							<div style=clear:both;></div>
 							<?php wp_link_pages(array('before' => 'Pages: ', 'next_or_number' => 'number')); ?>
 
 						<?php edit_post_link('Edit', '<p>', '</p>'); ?>
