@@ -8,6 +8,8 @@ Version 2.0.2 (9-30-11)
 -Added max-width and height:auto to full-size images to fix blowout issue. 
 -Floats now properly clearing. 
 -Post pagination added to main blog index page. 
+-register_sidebar calls now within a function hooked into widgets_init. 
+-Added styling to definition list title and text elements.
 
 Version 2.0.1 (8-05-11)
 -Removed TimThumb, replaced with WordThumb for increased security.
